@@ -226,6 +226,8 @@ or
                                     a filter to file out the <br>. A sed oneliner like the following
                                     will do the job: sed 's/<[^<>]*>//g'
     --alertonly                     List only alerting VMs. Important here to avoid masses of data.
+or
+-s, --subselect=version             Full version string of this vCenter installation.
 
 SOAP API:
 ---------
@@ -560,6 +562,8 @@ or
                                     Be aware that your messing connections (email, SMS...) must use
                                     a filter to file out the <br>. A sed oneliner like the following
                                     will do the job: sed 's/<[^<>]*>//g'
+or
+-s, --subselect=version             Full version string of this ESXi host installation.
 
 Storage info:
 -------------
